k8s/k8s-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
spec:
  selector:
    matchLabels:
      app: django-app
  replicas: 4
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
      - name: django-app
        image: hohyun10/winwinmarket_project:v3
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: django-app-service
spec:
  selector:
    app: django-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
