k8s/NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1beta1
kind: NetworkPolicy
metadata:
  name: latency-policy
spec:
  podSelector:
    matchLabels:
      app: latency
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: worker
    ports:
    - protocol: TCP
      port: 53
      name: dns
  policyTypes:
  - ingress
